adicionar método delete
